2008-08-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-mux.c:
	(gst_matroska_mux_handle_sink_event),
	(flac_streamheader_to_codecdata):
	We need to drop one additional buffer for FLAC as the fLaC
	marker and STREAMINFO block are merged into one buffer in the caps.

	Also don't pretend to support NEWSEGMENT events, otherwise we
	will most probably write some invalid data.

2008-08-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-mux.c: (flac_streamheader_to_codecdata),
	(gst_matroska_mux_audio_pad_setcaps):
	Add support for muxing FLAC into Matroska containers.
	Fixes bug #311586.

2008-08-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/flac/gstflacenc.c: (gst_flac_enc_check_discont):
	Actually provide the variables required for the format string.

2008-08-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_reset),
	(gst_matroska_demux_element_send_event),
	(gst_matroska_demux_handle_seek_event), (gst_matroska_demux_loop):
	* gst/matroska/matroska-demux.h:
	Close the current segment if we're doing a non-flushing seek and send
	the close-segment and the new segment of the seek from the streaming
	thread.

2008-08-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/flac/gstflacenc.c: (gst_flac_enc_write_callback),
	(gst_flac_enc_check_discont), (gst_flac_enc_chain),
	(gst_flac_enc_change_state):
	* ext/flac/gstflacenc.h:
	Handle non-zero start timestamps correctly, mark header packets as
	IN_CAPS and print a warning and suggest using audiorate if stream
	discontinuities are detected. When FLAC supports flushing the encoder
	somehow this should be done for discontinuities instead.

	Remove some unused variables from the instance struct.

2008-08-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/flac/gstflacenc.c: (gst_flac_enc_seek_callback):